edit button changes state

--- a/src/js/options/profile/profile.css
+++ b/src/js/options/profile/profile.css
@@ -43,6 +43,18 @@
     color: #6c757d;
     cursor: pointer;
 }
+
+.profile-done-btn{
+    border: none;
+    border-radius: 1.5rem;
+    width: 70%;
+    padding: 2%;
+    font-weight: 600;
+    background-color: #0062cc;
+    color: white;
+    cursor: pointer;
+}
+
 .proile-rating{
     font-size: 12px;
     color: #818182;
